# plane-segmentation

./: .gitignore  CMakeLists.txt  README.md
dataset/: TIMESTAMPS  depth_00000.pgm  depth_00001.pgm  depth_00002.pgm  depth_00003.pgm  depth_00004.pgm  depth_00005.pgm  depth_00006.pgm  depth_00007.pgm  depth_00008.pgm  depth_00009.pgm  depth_00010.pgm  depth_00011.pgm  depth_00012.pgm  image_00000.pgm  image_00001.pgm  image_00002.pgm  image_00003.pgm  image_00004.pgm  image_00005.pgm  image_00006.pgm  image_00007.pgm  image_00008.pgm  image_00009.pgm  image_00010.pgm  image_00011.pgm  image_00012.pgm
src/: main.cpp
